--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
     		<ul>
         		<li><a href="mailto:zuurixgames.com">email</a></li>
         		<li><a href="https://github.com/zuurix">github.com/zuurix</a></li>
+			<li><a href="https://github.com/zuurix/blog">RSS</a></li>
 			</ul>
 		</footer>
 	</body>
