--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     		<ul>
         		<li><a href="mailto:zuurixgames.com">email</a></li>
         		<li><a href="https://github.com/zuurix">github.com/zuurix</a></li>
-			<li><a href="https://github.zuurix.io/blog/atom.xml">RSS</a></li>
+			<li><a href="https://zuurix.github.io/blog/atom.xml">RSS</a></li>
 			</ul>
 		</footer>
 	</body>
