--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:zuurixgames.com">email</a></li>
-        		<li><a href="https://github.com/zuurix">github.com/zuurix</a></li>
+        		<li><a href="mailto:zuurixgames.com">Email</a></li>
 			<li><a href="blog/atom.xml">RSS feed</a></li>
 			</ul>
 		</footer>
