--- a/ccs/main.css
+++ b/ccs/main.css
@@ -2,39 +2,32 @@ body {
     margin: 60px auto;
     width: 70%;
 }
-
 nav ul, footer ul {
-    font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
-    padding: 20px;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
     list-style: none;
     font-weight: bold;
 }
-
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
-
 a {
     text-decoration: none;
     color: #999;
 }
-
 a:hover {
     text-decoration: underline;
 }
-
 h1 {
-    font-size: 14em;
-    font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
+    font-size: 3em;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-
 p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
 }
-
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
