--- a/ccs/main.css
+++ b/ccs/main.css
@@ -3,7 +3,7 @@ body {
     width: 70%;
 }
 nav ul, footer ul {
-    font-family:'Lucida Console';
+    font: 'Palatino Linotype';
     padding: 0px;
     list-style: none;
     font-weight: bold;
@@ -14,6 +14,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
+    font: 'Palatino Linotype';
     color: #999;
 }
 a:hover {
@@ -21,10 +22,11 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family: 'Lucida Console';
+    font: 'Palatino Linotype';
 }
 p {
     font-size: 1.5em;
+    font: 'Palatino Linotype';
     line-height: 1.4em;
     color: #333;
 }
