--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:zuurixgames.com">Email</a></li>
-			<li><a href="atom.xml">RSS feed</a></li>
+			<li><a href="https://www.zuurix.github.io/blog/">RSS feed</a></li>
 			</ul>
 		</footer>
 	</body>
