--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>{{ page.title }}</title>
 		<!-- link to main stylesheet -->
+		<img src="http://i.imgur.com/OTmZncL.png" alt="Zuurix" style="width:250px;height:250px;">
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
