--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:zuurixgames.com">Contact</a></li>			
+        		<li><a href="mailto:zuurixgames.com">Contact Zuurix</a></li>			
 			</ul>
 		</footer>
 	</body>
