--- a/css/main.css
+++ b/css/main.css
@@ -19,11 +19,13 @@ a {
     text-decoration: none;
     color: #999;
 }
+
 a:hover {
     text-decoration: underline;
 }
 
 h1 {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
     font-size: 3em;
 }
 
