--- a/css/main.css
+++ b/css/main.css
@@ -4,18 +4,20 @@ body {
 }
 
 nav ul, footer ul {
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+    font-family: "Arial", "Helvetica", sans-serif;
     padding: 0px;
     list-style: none;
     font-weight: bold;
 }
 
 nav ul li, footer ul li {
+    font-family: "Arial", "Helvetica", sans-serif;
     display: inline;
     margin-right: 20px;
 }
 
 a {
+    font-family: "Arial", "Helvetica", sans-serif;
     text-decoration: none;
     color: #999;
 }
@@ -25,26 +27,30 @@ a:hover {
 }
 
 h1 {
-    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
-    font-size: 3em;
+    font-family: "Arial", "Helvetica", sans-serif;
+    font-size: 2em;
 }
 
 p {
+    font-family: "Arial", "Helvetica", sans-serif;
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
 }
 
 footer {
+    font-family: "Arial", "Helvetica", sans-serif;
     border-top: 1px solid #d5d5d5;
     font-size: 1em;
 }
 
 ul.posts { 
+    font-family: "Arial", "Helvetica", sans-serif;
     margin: 20px auto 40px; 
     font-size: 1.5em;
 }
 
 ul.posts li {
+    font-family: "Arial", "Helvetica", sans-serif;
     list-style: none;
 }
