--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,8 @@ nav ul, footer ul {
 nav ul li, footer ul li {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     display: inline;
-    margin-right: 0px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 
 a {
