--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ p {
 
 footer {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-    border-top: 1px solid #d5d5d5;
+    border-top: 1px solid #9A9A9A;
     font-size: 1em;
 }
 
