--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ nav ul li, footer ul li {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     display: inline;
     margin-right: 20px;
+    background-color: #C8C8C8
 }
 
 a {
