--- a/css/main.css
+++ b/css/main.css
@@ -3,18 +3,28 @@ body {
     width: 70%;
 }
 
-nav ul, footer ul {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
 
-nav ul li {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-    display: inline;
-    margin-right: 20px;
-    background-color: #C8C8C8
+nav li {
+    float: left;
+}
+
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: #111;
 }
 
 footer ul li {
