--- a/css/main.css
+++ b/css/main.css
@@ -29,13 +29,13 @@ nav li a:hover {
 }
 
 footer ul li {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     display: inline;
     margin-right: 20px;
 }
 
 a {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     text-decoration: none;
     color: #800000;
 }
@@ -45,35 +45,36 @@ a:hover {
 }
 
 h1 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     font-size: 2em;
+    background-color: #e6e6e6;
 }
 
 h2 {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     font-size: 1.6em;
 }
 
 p {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
 }
 
 footer {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     border-top: 1px solid #9A9A9A;
     font-size: 1em;
 }
 
 ul.posts { 
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     margin: 20px auto 20px; 
     font-size: 1.5em;
 }
 
 ul.posts li {
-    font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     list-style: none;
 }
