--- a/css/main.css
+++ b/css/main.css
@@ -66,6 +66,7 @@ footer {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     border-top: 1px solid #9A9A9A;
     font-size: 1em;
+    margin-right: 0px;
 }
 
 ul.posts { 
