--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ h1 {
     font-size: 2em;
     padding: 32px 32px 16px 16px;
     background-color: #e6e6e6;
+    margin: 0px 0px 0px 0px;
 }
 
 h2 {
