--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@ a:hover {
 h1 {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     font-size: 2em;
+    text-align: center;
     padding: 32px 32px 16px 16px;
     background-color: #e6e6e6;
     margin: 0px 0px 0px 0px;
