--- a/css/main.css
+++ b/css/main.css
@@ -51,8 +51,8 @@ h2 {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     font-size: 1.6em;
     vertical-align: middle;
-    padding: 16px 8px 16px 8px;
-    background-color: #e6e6e6;
+    padding: 16px 16px 16px 16px;
+    background-color: #d9d9d9;
     margin: 0px 0px 0px 0px;
 }
 
