--- a/css/main.css
+++ b/css/main.css
@@ -70,11 +70,19 @@ footer {
     margin-right: 0px;
 }
 
-footer ul li {
-    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
-    display: inline;
-    margin-right: 0px;
+footer li a {
+    background-color: #e6e6e6;
+    display: block;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
 }
+
+footer li a:hover {
+    background-color: #800000;
+    text-decoration: none;
+}
+
 
 ul.posts { 
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
