--- a/css/main.css
+++ b/css/main.css
@@ -70,8 +70,8 @@ footer {
     margin-right: 0px;
 }
 
-footer ul li a {
-    background-color: #e6e6e6;
+footer ul a {
+    background-color: #333;
     display: block;
     color: white;
     padding: 14px 16px;
