--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,7 @@
 			
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li><a href="mailto:zuurixgames.com">Contact Zuurix</a></li>			
-			</ul>
+			<a href="mailto:zuurixgames@gmail.com">Contact Zuurix</a>
 		</footer>
 	</body>
 </html>
