--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,14 @@ footer a {
     text-decoration: none;
 }
 
+footer a:hover {
+    background-color: #800000;
+    display: block;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
 ul.posts { 
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     margin: 20px auto 20px; 
