--- a/css/main.css
+++ b/css/main.css
@@ -65,10 +65,8 @@ h3 {
     vertical-align: middle;
     padding: 8px 8px 8px 8px;
     background-color: #b59b9b;
-    margin: 12px 12px 12px 12px;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-    box-sizing: border-box;         /* Opera/IE 8+ */
+    margin: 12px 12px 12px 12px;  
+    width: auto;
 }
 
 p {
