--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ h3 {
     padding: 8px 8px 8px 8px;
     background-color: #b59b9b;
     margin: 12px 12px 12px 12px;  
-    width: auto;
+    width: 100px;
 }
 
 p {
