--- a/css/main.css
+++ b/css/main.css
@@ -40,15 +40,18 @@ nav li a:hover {
 	font-size: 1em;
 	padding: 16px 31px;
 	text-decoration: none;
+	padding: 8px 8px 8px 8px;
 }
 
 .button:hover {
 	background-color:#800000;
+	text-decoration: none;
 }
 
 .button:active {
 	position:relative;
 	top:1px;
+	text-decoration: none;
 }
 
 a {
