--- a/css/main.css
+++ b/css/main.css
@@ -30,28 +30,27 @@ nav li a:hover {
     text-decoration: none;
 }
 
-/*Button*/
-.button {
-	background-color: #333;
-	display: inline-block;
-	cursor: pointer;
-	color: white;
-	font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
-	font-size: 1em;
-	padding: 16px 31px;
-	text-decoration: none;
-	padding: 8px 8px 8px 8px;
+
+button {
+    background-color: #333;
+    display: inline-block;
+    cursor: pointer;
+    color: white;
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
+    font-size: 1em;
+    padding: 16px 31px;
+    text-decoration: none;
 }
 
-.button:hover {
-	background-color:#800000;
-	text-decoration: none;
+button:hover {
+    background-color:#800000;
+    text-decoration: none;
 }
 
-.button:active {
-	position:relative;
-	top:1px;
-	text-decoration: none;
+button:active {
+    position:relative;
+    top:1px;
+    text-decoration: none;
 }
 
 a {
