--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@ body {
     width: 70%;
 }
 
+<---Navigation--->
+
 nav ul {
     list-style-type: none;
     margin: 0;
@@ -30,28 +32,36 @@ nav li a:hover {
     text-decoration: none;
 }
 
+<---Button--->
 
-zbutton {
+zbutton ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
     background-color: #333;
-    display: inline-block;
+}
+
+zbutton li {
+    float: left;
+}
+
+zbutton li a {
+    display: block;
     cursor: pointer;
     color: white;
-    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
-    font-size: 1em;
-    padding: 16px 31px;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
 }
 
-zbutton:hover {
-    background-color:#800000;
+zbutton li a:hover {
+    background-color: #800000;
+    color: #d9d9d9;
     text-decoration: none;
 }
 
-zbutton:active {
-    position:relative;
-    top:1px;
-    text-decoration: none;
-}
+<---Other--->
 
 a {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
