--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
-		<img src="http://i.imgur.com/ISecpaJ.png" alt="Zuurix.com" style="width:842px;height:248px;">
+		<img src="http://i.imgur.com/65jeRRT.png" alt="Zuurix.com" style="width:842px;height:248px;">
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
