--- a/css/main.css
+++ b/css/main.css
@@ -55,7 +55,7 @@ h2 {
     font-size: 1.6em;
     vertical-align: middle;
     padding: 16px 16px 16px 16px;
-    margin: 16px 16px 16px 16px;
+    margin: 0x 0px 0px 0px;
     background-color: #d9d9d9;
 }
 
@@ -65,7 +65,7 @@ h3 {
     font-size: 1em;
     vertical-align: middle;
     padding: 8px 8px 8px 8px;
-    margin: 8px 8px 8px 8px;  
+    margin: 0px 0px 0px 0px;  
 }
 
 /*Genre box*/
