--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,12 @@ nav li a:hover {
     text-decoration: none;
 }
 
+nav li a:active {
+    background-color: #ff0000;
+    color: #d9d9d9;
+    text-decoration: none;
+}
+
 a {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     text-decoration: none;
