--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ nav li a:hover {
 
 nav li a:active {
     background-color: #800000;
-    color: #ff0000;
+    color: #333;
     text-decoration: none;
 }
 
@@ -137,7 +137,7 @@ footer a:hover {
 footer a:active {
     background-color: #800000;
     display: block;
-    color: #ff0000;
+    color: #333;
     padding: 14px 16px;
     text-decoration: none;
 }
