--- a/css/main.css
+++ b/css/main.css
@@ -156,3 +156,25 @@ ul.posts li {
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
 }
+
+.myButton {
+	background-color: #333;
+    color: white;
+	display:inline-block;
+	cursor:pointer;
+	text-decoration:none;
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
+    font-size: 1em;
+    vertical-align: middle;
+    padding: 8px 8px 8px 8px;
+    margin: 0px 0px 0px 0px;  
+}
+.myButton:hover {
+	background-color:#800000;
+    color: #d9d9d9;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+    color: #333;
+}
