--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,6 @@ span.status-alpha {
 p {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     font-size: 1.5em;
-    line-height: 1.4em;
     color: #333;
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
@@ -144,10 +143,18 @@ footer a:active {
 
 ul.posts { 
     list-style: none;
+    font-size: 1.5em;
+    color: #333;
+    padding: 8px 8px 8px 8px;
+    margin: 12px 12px 12px 12px;
 }
 
 ul.posts li {
     list-style: none;
+    font-size: 1.5em;
+    color: #333;
+    padding: 8px 8px 8px 8px;
+    margin: 12px 12px 12px 12px;
 }
 
 .myButton {
