--- a/css/main.css
+++ b/css/main.css
@@ -167,18 +167,20 @@ ul.posts li {
     font-size: 1em;
     vertical-align: middle;
     padding: 8px 8px 8px 8px;
-    margin: 0px 0px 16px 0px;  
+    margin: 12px 12px 12px 12px;
 }
 .myButton:hover {
     cursor:pointer;
     text-decoration:none;
     background-color:#800000;
     color: #d9d9d9;
+    padding: 8px 8px 8px 8px;
+    margin: 12px 12px 12px 12px;
 }
 .myButton:active {
     cursor:pointer;
     text-decoration:none;
-    position:relative;
-    top:1px;
     color: #333;
+    padding: 8px 8px 8px 8px;
+    margin: 12px 12px 12px 12px;
 }
