--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 		{% include head.html %}
-    		{% seo %}
+    		/*{% seo %}*/
 	</head>
 	<body>
 		<img src="http://i.imgur.com/o9kLktd.png" alt="Zuurix.com" style="width:842px;height:248px;">
