--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-			<li><a href="/blog">Blog</a></li>
+			<li><a href="/blog">Community</a></li>
 			<li><a href="/games">Games</a></li>
 	        	<li><a href="/about">About</a></li>
     		</ul>
