--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,7 @@ h1 {
 }
 
 /*Game name*/
+
 h2 {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     font-size: 1.6em;
@@ -66,6 +67,7 @@ h2 {
 }
 
 /*Game genre*/
+
 h3 {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     font-size: 1em;
@@ -75,6 +77,7 @@ h3 {
 }
 
 /*Genre box*/
+
 span.box {
     background-color: #b59b9b;
     padding: 8px 8px 8px 8px;
@@ -82,6 +85,7 @@ span.box {
 }
 
 /*Status completed box*/
+
 span.status-completed {
     background-color: #42f46b;
     padding: 8px 8px 8px 8px;
@@ -89,6 +93,7 @@ span.status-completed {
 }
 
 /*Status beta box*/
+
 span.status-beta {
     background-color: #f4d742;
     padding: 8px 8px 8px 8px;
@@ -96,6 +101,7 @@ span.status-beta {
 }
 
 /*Status alpha box*/
+
 span.status-alpha {
     background-color: #f45942;
     padding: 8px 8px 8px 8px;
@@ -169,6 +175,7 @@ ul.posts li {
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
 }
+
 .myButton:hover {
     cursor:pointer;
     text-decoration:none;
@@ -177,10 +184,17 @@ ul.posts li {
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
 }
+
 .myButton:active {
     cursor:pointer;
     text-decoration:none;
     color: #333;
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
+}
+
+/*Disqus*/
+
+diquis_thread {
+padding: 20px;
 }
