Disqus plugin update

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,7 @@
-<div id="disqus_thread"></div>
+<div id="disqus_thread" style="
+padding = 200px;                           
+">
+
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'zuurix'; // required: replace example with your forum shortname
