--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,6 +1,4 @@
-<div id="disqus_thread" style="
-padding = 200px;                           
-">
+<div id="disqus_thread" padding = 100px;>
 
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
