--- a/css/main.css
+++ b/css/main.css
@@ -194,5 +194,8 @@ ul.posts li {
 }
 
 #disqus_thread {
-padding: 25px;
+padding-top: 0px;
+padding-right: 20px;
+padding-bottom: 0px;
+padding-left: 20px;
 }
