--- a/css/main.css
+++ b/css/main.css
@@ -194,8 +194,8 @@ ul.posts li {
 }
 
 #disqus_thread {
-padding-top: 0px;
-padding-right: 20px;
-padding-bottom: 0px;
-padding-left: 20px;
+margin-top: 0px;
+margin-right: 20px;
+margin-bottom: 0px;
+margin-left: 20px;
 }
