--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,12 @@ layout: default
 <h1>{{ page.title }}</h1>
 
 <div class="post">
-  {{ content }}
+  
+{{ content }}
+  
+<comments>
+<a>Comments</a>
+</comments>
   
 {% include disqus.html %}
   
