--- a/css/main.css
+++ b/css/main.css
@@ -38,8 +38,11 @@ nav li a:active {
 
 a {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
-    text-decoration: none;
+    font-size: 1.3em;
     color: #800000;
+    padding: 8px 8px 8px 8px;
+    margin: 12px 12px 12px 12px;
+    text-decoration: none;
 }
 
 a:hover {
