--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,20 @@ a {
     text-decoration: none;
 }
 
+a {
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
+    text-decoration: none;
+    color: #800000;
+}
+
+a ul {
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
+    font-size: 1.3em;
+    color: #800000;
+    padding: 8px 8px 8px 8px;
+    margin: 12px 12px 12px 12px;
+}
+
 a:hover {
     text-decoration: underline;
 }
