Attempt to increase size of non-ordered list links

--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ a {
     color: #800000;
 }
 
-a ul {
+a ul li {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     font-size: 1.3em;
     color: #800000;
