Logo now links to main menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 		{% seo %}
 	</head>
 	<body>
-		<img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Zuurix.com%20logo.png" alt="Zuurix.com" style="width:842px;height:248px;" href="/">
+		<a href="/"><img src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Zuurix.com%20logo.png" alt="Zuurix.com" style="width:842px;height:248px;"></a>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
