New text style added

--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,15 @@ h3 {
     margin: 0px 0px 0px 0px;  
 }
 
+/*Plain text*/
+
+h4 {
+    font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
+    font-size: 1.3em;
+    padding: 8px 8px 8px 8px;
+    margin: 12px 12px 12px 12px;
+}
+
 /*Genre box*/
 
 span.box {
