--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ h3 {
 
 /*Plain text*/
 
-h4 {
+plain {
     font-family: "Palatino Linotype", "Book Antiqua", "Palatino", serif;
     font-size: 1.3em;
     padding: 8px 8px 8px 8px;
