--- a/css/main.css
+++ b/css/main.css
@@ -37,13 +37,13 @@ nav li a:active {
 }
 
 a {
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Palatino Linotype', sans-serif;
     text-decoration: none;
     color: #800000;
 }
 
 a ul li {
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Palatino Linotype', sans-serif;
     font-size: 1.3em;
     color: #800000;
     padding: 8px 8px 8px 8px;
@@ -55,7 +55,7 @@ a:hover {
 }
 
 h1 {
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Palatino Linotype', sans-serif;
     font-size: 2em;
     vertical-align: middle;
     padding: 32px 16px 32px 16px;
@@ -66,7 +66,7 @@ h1 {
 /*Game name*/
 
 h2 {
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Palatino Linotype', sans-serif;
     font-size: 1.6em;
     vertical-align: middle;
     padding: 16px 16px 16px 16px;
@@ -77,7 +77,7 @@ h2 {
 /*Game genre*/
 
 h3 {
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Palatino Linotype', sans-serif;
     font-size: 1em;
     vertical-align: middle;
     padding: 8px 8px 8px 8px;
@@ -87,8 +87,8 @@ h3 {
 /*Plain text*/
 
 plain {
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 0.7em;
+    font-family: 'Palatino Linotype', sans-serif;
+    font-size: 1em;
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
 }
@@ -126,7 +126,7 @@ span.status-alpha {
 }
 
 p {
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Palatino Linotype', sans-serif;
     font-size: 1.3em;
     color: #333;
     padding: 8px 8px 8px 8px;
@@ -134,7 +134,7 @@ p {
 }
 
 footer {
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Palatino Linotype', sans-serif;
     font-size: 1em;
     margin-right: 0px;
     cursor: pointer;
@@ -167,7 +167,7 @@ footer a:active {
 /*Comments divider*/
 
 comments {
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Palatino Linotype', sans-serif;
     font-size: 1em;
     margin-right: 0px;
 }
@@ -222,7 +222,7 @@ ul.posts li {
     display:inline-block;
     cursor:pointer;
     text-decoration:none;
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Palatino Linotype', sans-serif;
     font-size: 1em;
     vertical-align: middle;
     padding: 8px 8px 8px 8px;
