--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ span.status-alpha {
 }
 
 p {
-    font-family: 'Palatino Linotype', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     font-size: 1.3em;
     color: #333;
     padding: 8px 8px 8px 8px;
