--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand');
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web');
 
 body {
     margin: 60px auto;
