--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Titillium+Web');
+@import url('https://fonts.googleapis.com/css?family=Titillium+Web:600');
 
 body {
     margin: 60px auto;
@@ -92,7 +92,7 @@ plain {
     font-family: 'Titillium Web', sans-serif;
     font-size: 1em;
     padding: 8px 8px 8px 8px;
-    margin: 12px 12px 12px 12px;
+    margin: 8px 8px 8px 8px;
 }
 
 /*Genre box*/
