--- a/css/main.css
+++ b/css/main.css
@@ -264,3 +264,10 @@ ul.posts li {
 width:842px;
 height:248px
 }
+
+/*Content box*/
+
+#content {
+    margin-top: 32px;
+    margin-bottom: 32px;
+}
