--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,15 @@ p {
     margin: 12px 12px 12px 12px;
 }
 
+p2 {
+    font-family: 'Nunito', sans-serif;
+    font-size: 0.5em;
+    color: #333;
+    padding: 8px 8px 8px 8px;
+    margin: 12px 12px 12px 12px;
+}
+
+
 footer {
     font-family: 'Nunito', sans-serif;
     font-size: 1em;
