--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ h1 {
     font-size: 2em;
     vertical-align: middle;
     padding: 32px 16px 32px 48px;
-    background-color: #ffbb99;
+    background-color: #ff9999;
     margin: 0px 0px 0px 0px;
 }
 
