--- a/css/main.css
+++ b/css/main.css
@@ -57,12 +57,14 @@ a:hover {
     text-decoration: underline;
 }
 
+/*Page header*/
+
 h1 {
     font-family: 'Nunito', sans-serif;
     font-size: 2em;
     vertical-align: middle;
     padding: 32px 16px 32px 32px;
-    background-color: #ababed;
+    background-color: #b3ccff;
     margin: 0px 0px 0px 0px;
 }
 
