--- a/css/main.css
+++ b/css/main.css
@@ -138,12 +138,12 @@ p {
     margin: 12px 12px 12px 12px;
 }
 
-p2 {
+p-special {
     font-family: 'Nunito', sans-serif;
-    font-size: 1.3em;
+    font-size: 0.65em;
     color: #333;
-    padding: 1px 1px 1px 1px;
-    margin: 1px 1px 1px 1px;
+    padding: 8px 8px 8px 8px;
+    margin: 12px 12px 12px 12px;
 }
 
 footer {
