--- a/css/main.css
+++ b/css/main.css
@@ -138,9 +138,9 @@ p {
     margin: 12px 12px 12px 12px;
 }
 
-p-date {
+p2 {
     font-family: 'Nunito', sans-serif;
-    font-size: 1em;
+    font-size: 1.3em;
     color: #333;
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
