--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ p {
     margin: 12px 12px 12px 12px;
 }
 
-p date {
+date {
     font-family: 'Nunito', sans-serif;
     font-size: 1em;
     color: #333;
