--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 			
 		</div><!-- /.container -->
 		<footer>
-			<a href="mailto:zuurixgames@gmail.com">Contact Zuurix</a>
+			<a>Contact Zuurix: zuurix@protonmail.com</a>
 		</footer>
 	</body>
 </html>
