--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
 			
 		</div><!-- /.container -->
 		<footer>
-			<a>Back to the top</a>
+			<a href="#top">Back to the top</a>
 		</footer>
 	</body>
 </html>
