--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ a ul li {
     color: #800000;
     padding: 8px 8px 8px 8px;
     margin: 12px 12px 12px 12px;
+    list-style-image: url('https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/list_arrow.png');
 }
 
 a:hover {
