--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	<body>
 		<a href="/"><img id=logo src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Zuurix.com%20logo.png" alt="Zuurix.com"></a>
 		<nav>
-    		<ul>
+    		<ul style="list-style-type:none">
         		<li><a href="/">Home</a></li>
 			<li><a href="/games">Games</a></li>
 			<li><a href="/community">Community</a></li>
