--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 		<a href="/"><img id=logo src="https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/Zuurix.com%20logo.png" alt="Zuurix.com"></a>
 		<nav>
     		<ul>
-        		<li><a href="/">Home**</a></li>
+        		<li><a href="/">Home</a></li>
 			<li><a href="/games">Games</a></li>
 			<li><a href="/community">Community</a></li>
 	        	<li><a href="/about">About</a></li>
