--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ ul {
 }
 
 nav ul {
-    list-style-type: none;
+    list-style-type: disc;
     list-style_image: none;
     margin: 0;
     padding: 0;
