--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
 
 nav ul {
     list-style-type: none;
+    list-style-image: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -43,7 +44,8 @@ nav li a:active {
 /* Link unordered list */
 
 link ul {
-list-style-image: url('https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/list_arrow.png');
+    list-style-type: none;
+    list-style-image: url('https://raw.githubusercontent.com/Zuurix/Zuurix.github.io/master/images/miscellaneous/list_arrow.png');
 }
 
 /* Text */
