--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,8 @@ h1 {
     font-size: 2em;
     vertical-align: middle;
     padding: 32px 16px 32px 32px;
-    background-color: #b3ccff;
+    color: #333;
+    background-color: #cccccc;
     margin: 0px 0px 0px 0px;
 }
 
@@ -82,6 +83,7 @@ h2 {
     font-size: 1.6em;
     vertical-align: middle;
     padding: 16px 16px 16px 16px;
+    color: #333;
     background-color: #d9d9d9;
     margin: 0x 0px 0px 0px;
 }
