--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ a ul li {
     font-family: 'Nunito', sans-serif;
     font-size: 1.3em;
     color: #800000;
-    padding: 8px 8px 8px 24px;
+    padding: 8px 8px 8px 500px;
     margin: 12px 12px 12px 12px;
 }
 
@@ -71,8 +71,8 @@ h1 {
     font-size: 2em;
     vertical-align: middle;
     padding: 32px 16px 32px 32px;
-    color: #ffffff;
-    background-color: #800000;
+    color: #333;
+    background-color: #cccccc;
     margin: 0px 0px 0px 0px;
 }
 
