--- a/css/main.css
+++ b/css/main.css
@@ -72,8 +72,8 @@ h1 {
     font-size: 2em;
     vertical-align: middle;
     padding: 32px 16px 32px 32px;
-    color: #333;
-    background-color: #cccccc;
+    color: #fffff;
+    background-color: #cc0000;
     margin: 0px 0px 0px 0px;
 }
 
