--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ h1 {
     vertical-align: middle;
     padding: 32px 16px 32px 32px;
     color: #ffffff;
-    background-color: #4d4d4d;
+    background-color: #333;
     margin: 0px 0px 0px 0px;
 }
 
